[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "logpass_pytest_plugins"
version = "0.1.1"
description = "Pytest's plugins crafted by LogPass"
authors = [
  "Bartosz Barwikowski <bartosz.barwikowski@logpass.me>",
  "Łukasz Skarżyński <lukasz.skarzynski@logpass.me>",
]
readme = "README.md"
repository = "https://github.com/LogPass/logpass_pytest_plugins"
homepage = "https://dev.logpass.me"
keywords = [
  "pytest",
  "pytest-plugin",
  "django",
  "channels",
  "factory_boy",
  "logpass",
  "tests",
  "test",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]


[tool.poetry.dependencies]
python = "^3.7.0"

pytest = ">=6.2.0"
# optionals
# auto_pytest_factoryboy
pytest-factoryboy = { version = "^2.5.0", optional = true }
# channels
channels = { version = ">=3.0.0", optional = true }
pytest-asyncio = { version = ">=0.17.2,<0.20.0", optional = true }
pytest-django = { version = "^4.5.2", optional = true }
# rest framework
djangorestframework = { version = "^3.13.1", optional = true }
# flask
flask = { version = "^2.1.2", optional = true }


[tool.poetry.extras]
auto_pytest_factoryboy = ["pytest-factoryboy"]
channels = ["channels", "pytest-asyncio", "pytest-django"]
flask = ["flask"]
rest_framework = ["djangorestframework"]


[tool.poetry.dev-dependencies]
# tests
coverage-conditional-plugin = "^0.5.0"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.8.2"
pytest-randomly = "^3.12.0"
pytest-timeout = "^2.1.0"

# linters
# python
flake8-pytest-style = "^1.5.1"
flake8-todos = "^0.1.5"
flake8-typing-imports = "^1.12.0"
import-linter = "^1.2.7"
wemake-python-styleguide = "^0.16.1"
yesqa = "^1.3.0"
# other
safety = "^2.1.0"

# type hintings
mypy = "^1.0"

# plugins
Django = "^3.2.14"
